--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Otus Finance</title>
+    <title>Duck Finance</title>
     <meta name="description" content="Otus Finance Build and Manage Options Vaults">
     <link rel="icon" href="/favicon.ico">
     <meta name="next-head-count" content="5">
